atualiza cadastro pra nova model

--- a/Frontend/src/app/components/cadastro/cadastro.component.html
+++ b/Frontend/src/app/components/cadastro/cadastro.component.html
@@ -2,8 +2,13 @@
   <h3>Cliente</h3>
 
   <div class="form-outline ">
-    <label class="form-label">CPF</label>
-    <input type="text" class="form-control" formControlName="cpf" required/>
+    <label class="form-label">Email</label>
+    <input type="text" class="form-control" formControlName="email" required/>
+  </div>
+
+  <div class="form-outline ">
+    <label class="form-label">Senha</label>
+    <input type="password" class="form-control" formControlName="senha" required/>
   </div>
 
   <div class="form-outline">
